packages/libresat-cluster/kubeadm-cluster/traefik.yaml
# Ingress controller
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: traefik-ingress-lb
  name: traefik-ingress-controller
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
    spec:
      containers:
          # Comment below to NOT use DNS challenge (with HTTPS subdomains)
          - args:
            - "--api"
            - "--kubernetes"
            - "--logLevel=DEBUG"
            - "--debug"
            - "--defaultentrypoints=http,https"
            - "--entrypoints=Name:http Address::80 Redirect.EntryPoint:https"
            - "--entrypoints=Name:https Address::443 TLS"
            - "--acme"
            - "--acme.onhostrule"
            - "--acme.entrypoint=https"
            - "--acme.domains=*.stg1.libresat.space" # Change this to your own domain
            - "--acme.email=felicitas@pojtinger.com" # Change this to your own email
            - "--acme.storage=/certs/acme.json"
            - "--acme.dnschallenge"
            - "--acme.dnschallenge.provider=gandiv5"
          image: traefik:alpine
          name: traefik-ingress-lb
          ports:
            - containerPort: 80
              hostPort: 80
              name: http
            - containerPort: 443
              hostPort: 443
              name: https
            - containerPort: 8080
              name: admin
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
          volumeMounts:
            - mountPath: /certs
              name: certificates-claim
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
        - name: certificates-claim
          persistentVolumeClaim:
            claimName: certificates-claim
---
# Ingress controller service
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
    - name: https
      port: 443
      protocol: TCP
  selector:
    k8s-app: traefik-ingress-lb
  type: NodePort
